# xiuxian-mini-web

./: .dockerignore  .env.example  .gitignore  DOCKER-DEPLOY.md  Dockerfile  Dockerfile.simple  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
backend/: README.md  __init__.py  app.py  config.py  rate_limiter.py  server.py
backend/api/: handlers.py  routes.py
backend/data/: __init__.py  xutian_oracle_cases.json
backend/domain/: __init__.py  channels.py  models.py  realm.py  registry.py
backend/features/: __init__.py  cangkun_guide.py  dungeon_status.py  xutian_guide.py
backend/identity_state/: __init__.py  contracts.py  cooldown.py  deep_retreat.py  divination.py  duration.py  explore_rift.py  pet_touch.py  pet_warm.py  phaseful.py  scheduling.py  search_node.py  sect_teach.py  small_world.py  weakness.py  wendao.py  yindao.py  yuanying.py
backend/inbox/: __init__.py
backend/outbox/: __init__.py  (+6 more)
database/: optimize.sql
docs/: architecture.md  current-work-plan.md  listener-pipeline-convergence.md  log-group-command-design.md  product-plan.md  rust-aligned-plan.md  state-machine-audit.md
scripts/: backup-miniweb.sh  migrate-to-docker.sh  optimize-database.sh  quick-switch-to-docker.sh
tests/: README.md  layout_probe.py  test_api_contract.py  test_layout_probe.py  test_listener_history.py  test_log_commands.py  test_message_filter_regressions.py  test_realm.py  test_resource_stats_store.py
web/: README.md  index.html
(+162 files in other folders)
