[project]
name = "xiuxian-mini-web"
version = "0.1.0"
description = "Telegram xiuxian chat helper web interface"
requires-python = ">=3.11"
dependencies = [
  "pysocks>=1.7",
  "telethon>=1.36",
]

[project.scripts]
xiuxian-mini-web = "backend.app:main"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
